--- a/titoli.html
+++ b/titoli.html
@@ -10,13 +10,13 @@
 <body>
     <div class="nav">
         <a class="back" href="./html/index.html" target="_self">&lt;</a>
-        <img src="./logo.jpeg" alt="">
+        <img src="./img/logo.jpeg" alt="" height="40px">
         <div class="spazio"></div>
     </div>
     <div class="sottonav">I miei Titoli</div>
-    <a href="">
+    <a href="./video.html" target="_self">
         <div class="biglietto-nuovo">
-            <div class="foto"><img src="./WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt=""></div>
+            <div class="foto"><img src="./img/WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt="" width="70px"></div>
             <div class="testo">
             <b>C. S. EXTRA URBANA TARIFFA 3</b><br>
             Acquistato il  23/05/2022 13:04
