--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
     <div class="nav">
-        <img src="./logo.jpeg" alt="">
+        <img src="./img/logo.jpeg" alt="" height="50px">
     </div>
     <div class="spazio">
         <div class="box">
             <div class="foto">
-                <img src="./WhatsApp Image 2022-05-23 at 13.06.18.jpeg" alt="" srcset="">
+                <img src="./img/WhatsApp Image 2022-05-23 at 13.06.18.jpeg" alt="" srcset="" width="100px">
             </div>
             Acquista Titoli
         </div>
         <a href="./titoli.html" target="_self">
             <div class="box">
-                <img src="./WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt="">
+                <img src="./img/WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt="" width="100px">
                 I miei Titoli
             </div>
         </a>
     </div>
     <div class="spazio">
         <div class="box">
-            <img src="./WhatsApp Image 2022-05-23 at 13.06.51.jpeg" alt="">
+            <img src="./img/WhatsApp Image 2022-05-23 at 13.06.51.jpeg" alt="" width="100px">
             Ricarica Credito
         </div>
         <div class="box">
-            <img src="./WhatsApp Image 2022-05-23 at 13.07.07.jpeg" alt="">
+            <img src="./img/WhatsApp Image 2022-05-23 at 13.07.07.jpeg" alt="" width="100px">
             Elenco Movimenti
         </div>
     </div>
