--- a/video.html
+++ b/video.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./css/video.css">
 </head>
 <body>
-    <video src="./video.mp4" autoplay="on"></video>
+    <video src="./video.mp4"></video>
 </body>
 </html>
