--- a/titoli.html
+++ b/titoli.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="back" href="./html/index.html" target="_self">&lt;</a>
+        <a class="back" href="./index.html" target="_self">&lt;</a>
         <img src="./img/logo.jpeg" alt="" height="40px">
         <div class="spazio"></div>
     </div>
