--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="./titoli.html" target="_self">
             <div class="box">
                 <img src="./img/WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt="" width="100px">
-                I miei Titoli
+                Miei Titoli
             </div>
         </a>
     </div>
