--- a/html/titoli.html
+++ b/html/titoli.html
@@ -19,8 +19,8 @@
         <a class="biglietto-nuovo" id="biglietto" href="./biglietto.html">
             <div class="foto"><img src="../img/WhatsApp Image 2022-05-23 at 13.06.36.jpeg" alt="" width="70px"></div>
             <div class="testo">
-                <b>C. S. EXTRA URBANA TARIFFA 3</b><br>
-                Acquistato il  23/05/2022 13:04
+                <b>C. S. TARIFFA B</b><br>
+                Acquistato il  29/06/2022 13:04
             </div>
         </a>
     </div>
